# AiPoweredGameOfLife

./: README.md
AigameOfLife/: gameOfLifeEnv.py  golEnvTest.py  latestRes.npy  testLatestRes.py  train.py  train0.py
AigameOfLife/Cython/: GameOfLifePy.py  build.sh  libGameOfLifeWrapper.c  libGameOfLifeWrapper.pyx  setup.py
AigameOfLife/tensLogData/eval/: events.out.tfevents.1636148588.Luicks-MacBook-Pro.local.48500.1.v2  events.out.tfevents.1636149254.Luicks-MacBook-Pro.local.48571.1.v2  events.out.tfevents.1636149513.Luicks-MacBook-Pro.local.48614.1.v2  events.out.tfevents.1636149531.Luicks-MacBook-Pro.local.48622.1.v2  events.out.tfevents.1636149700.Luicks-MacBook-Pro.local.48669.1.v2  events.out.tfevents.1636149834.Luicks-MacBook-Pro.local.48702.1.v2  events.out.tfevents.1636231674.Luicks-MacBook-Pro.local.50212.1.v2  events.out.tfevents.1636232620.Luicks-MacBook-Pro.local.50304.1.v2  events.out.tfevents.1636232661.Luicks-MacBook-Pro.local.50313.1.v2  events.out.tfevents.1636232726.Luicks-MacBook-Pro.local.50332.1.v2  events.out.tfevents.1636281967.Luicks-MacBook-Pro.local.878.1.v2  events.out.tfevents.1636282532.Luicks-MacBook-Pro.local.936.1.v2  events.out.tfevents.1636282628.Luicks-MacBook-Pro.local.953.1.v2  events.out.tfevents.1636282887.Luicks-MacBook-Pro.local.1010.1.v2  (+26 more)
gameOfLife/: Makefile  build.sh
gameOfLife/src/: gameOfLife.c  gameOfLife.h
gameOfLife/test/: CMakeLists.txt  game.c
libGameOfLife/: CMakeLists.txt
libGameOfLife/src/: CMakeLists.txt  gameOfLife.c  gameOfLife.h
libGameOfLife/test/: CMakeLists.txt  game.c
(+35 files in other folders)
